[tool.poetry]
name = "load-test-ml-example"
version = "0.1.0"
description = ""
authors = ["Siddhartha <sidmontu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.3.2"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
pre-commit = "^2.15.0"
pytest-mock = "^3.6.1"
black = "21.7b0"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
coverage = {extras = ["toml"], version = "^5.5"}
isort = "^5.9.3"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.isort]
profile = "black"
